--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,1 @@
-C:\Algorotmos e programação Java\lista-Algoritimos1\target
-C:\Algorotmos e programação Java\lista-algoritmos2\target
-C:\Algorotmos e programação Java\lista-algoritmos3\target
+target
